--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,27 +5,61 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Video Summarize</title>
 <style>
-body { font-family: Arial; padding: 2rem; }
-input { width: 80%; padding: 0.5rem; margin-bottom: 1rem; }
-button { padding: 0.5rem 1rem; }
-#summary { margin-top: 1rem; white-space: pre-wrap; }
+  body { font-family: Arial, sans-serif; padding: 2rem; background: #f8f8f8; }
+  h1 { color: #222; margin-bottom: 1rem; }
+  input { width: 80%; padding: 0.5rem; margin-bottom: 1rem; border-radius: 5px; border: 1px solid #ccc; }
+  button { padding: 0.5rem 1rem; border-radius: 5px; border: none; background: #222; color: white; cursor: pointer; transition: 0.2s; }
+  button:hover { background: #555; }
+  #summary { margin-top: 1rem; white-space: pre-wrap; background: #fff; padding: 1rem; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
+  #loading { color: #555; margin-top: 1rem; }
+  #error { color: red; margin-top: 1rem; }
 </style>
 </head>
 <body>
 <h1>Video Summarize</h1>
 <input type="text" id="youtubeUrl" placeholder="Paste YouTube URL here" />
 <button onclick="summarize()">Summarize</button>
+<div id="loading"></div>
+<div id="error"></div>
 <div id="summary"></div>
+
 <script>
 async function summarize() {
-  const url = document.getElementById('youtubeUrl').value;
-  const res = await fetch('/api/summarize', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ youtubeUrl: url })
-  });
-  const data = await res.json();
-  document.getElementById('summary').innerText = data.summary;
+  const url = document.getElementById('youtubeUrl').value.trim();
+  const summaryDiv = document.getElementById('summary');
+  const loadingDiv = document.getElementById('loading');
+  const errorDiv = document.getElementById('error');
+
+  summaryDiv.innerText = '';
+  errorDiv.innerText = '';
+
+  if (!url) {
+    errorDiv.innerText = 'Please enter a YouTube URL.';
+    return;
+  }
+
+  loadingDiv.innerText = 'Generating summary... 🔄';
+
+  try {
+    const res = await fetch('/api/summarize', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ youtubeUrl: url })
+    });
+
+    const data = await res.json();
+
+    if (res.ok) {
+      summaryDiv.innerText = data.summary;
+    } else {
+      errorDiv.innerText = data.error || 'Something went wrong.';
+    }
+  } catch (err) {
+    console.error(err);
+    errorDiv.innerText = 'Error connecting to server.';
+  } finally {
+    loadingDiv.innerText = '';
+  }
 }
 </script>
 </body>
